--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Digiso</title>
-  <meta name="description" content="Bentofolio - Tailwind Personal Portfolio Template">
+  <meta name="description" content="Digiso">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" type="image/x-icon" href="">
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="assets/css/magnific-popup.css">
   <link rel="stylesheet" href="assets/css/animate.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
@@ -419,9 +418,9 @@
     </section>
     <!-- Services one area end -->
     <!-- text slider area start -->
-    <section class="text-sldier-area">
+    <section class="text-slider-area">
       <div class="slider-main d-flex align-items-center">
-        <div class="slider-item">
+        <div class="slider-item d-flex align-items-center">
           <h4 class="title">
             <img src="assets/img/icons/star-icon.svg" alt="star-icon">
             Business</h4>
@@ -432,7 +431,7 @@
             <img src="assets/img/icons/star-icon.svg" alt="star-icon">
             Promotion</h4>
         </div>
-        <div class="slider-item">
+        <div class="slider-item d-flex align-items-center">
           <h4 class="title">
             <img src="assets/img/icons/star-icon.svg" alt="star-icon">
             Business</h4>
@@ -447,33 +446,36 @@
     </section>
     <!-- text slider area end -->
     <!-- projects one area start -->
-    <section class="projects-one-area">
-      <div class="container position-relative">
-        <div class="lines">
+    <section class="projects-area position-relative z-1">
+      <div class="container project-container position-relative">
+        <div class="lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="section-title-block">
-          <div class="left-title position-relative">
-            <h3 class="section-title">
-              <img class="project-shape" src="assets/img/projects/projects-shape.svg" alt="projects-shape">
+        <div class="section-title-block d-flex">
+          <div class="left-title">
+            <h3 class="section-title position-relative">
+              <img class="project-shape position-absolute" src="assets/img/projects/projects-shape.svg"
+                alt="projects-shape">
               Here’s our latest project</h3>
           </div>
-          <p>Our goal is making your working process faster and easier. Thats why we’ve added tons of flexible options
+          <p class="des w-100">Our goal is making your working process faster and easier. Thats why we’ve added tons of
+            flexible options
             with exclusive functions.</p>
         </div>
-        <div class="projects-one-main">
+        <div class="projects-main">
           <div class="row">
-            <div class="col-lg-5 project-one-label">
-              <div class="project-one-item position-relative">
+            <div class="col-lg-5 project-label">
+              <div class="project-item position-relative">
                 <a href="#" class="d-block w-100">
-                  <div class="image">
+                  <div class="image overflow-hidden">
                     <img src="assets/img/projects/project-1-img-1.png" alt="project-1-img" class="img-fluid w-100">
                   </div>
-                  <div class="overlay">
+                  <div
+                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end">
                     <h3 class="project-title">D-form Business Strategy</h3>
                     <span href="#" class="view-project">View Project
                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -488,14 +490,15 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-7 project-one-label">
-              <div class="project-one-item position-relative">
+            <div class="col-lg-7 project-label">
+              <div class="project-item position-relative">
                 <a href="#" class="d-block w-100">
-                  <div class="image">
+                  <div class="image overflow-hidden">
                     <img src="assets/img/projects/project-1-img-2.png" alt="project-1-img" class="img-fluid w-100">
                   </div>
-                  <div class="overlay">
-                    <h3 class="project-title">D-form Business Strategy</h3>
+                  <div
+                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end">
+                    <h3 class="project-title">Mark Wide Marketing Strategy</h3>
                     <span href="#" class="view-project">View Project
                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -511,34 +514,34 @@
             </div>
           </div>
         </div>
-        <div class="view-all-projects">
+        <div class="view-all-projects d-flex justify-content-center">
           <a class="view-all-btn" href="service.html">
             View All Projects
             <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
           </a>
         </div>
-        <div class="counter-one">
+        <div class="counter-area">
           <div class="row g-4">
-            <div class="col-lg-3 counter-one-label">
-              <div class="counter-one-item text-center">
+            <div class="col-lg-3 counter-label">
+              <div class="counter-item text-center">
                 <h3 class="number"><span class="counter">28</span></h3>
                 <p>Years of Experience</p>
               </div>
             </div>
-            <div class="col-lg-3 counter-one-label">
-              <div class="counter-one-item text-center">
+            <div class="col-lg-3 counter-label">
+              <div class="counter-item text-center">
                 <h3 class="number"><span class="counter">2</span>k</h3>
                 <p>Project complete</p>
               </div>
             </div>
-            <div class="col-lg-3 counter-one-label">
-              <div class="counter-one-item text-center">
+            <div class="col-lg-3 counter-label">
+              <div class="counter-item text-center">
                 <h3 class="number"><span class="counter">12</span>k</h3>
                 <p>Happy Customers</p>
               </div>
             </div>
-            <div class="col-lg-3 counter-one-label">
-              <div class="counter-one-item text-center">
+            <div class="col-lg-3 counter-label">
+              <div class="counter-item text-center">
                 <h3 class="number"><span class="counter">17</span></h3>
                 <p>Award Winning</p>
               </div>
@@ -549,9 +552,9 @@
     </section>
     <!-- projects one area end -->
     <!-- team one area start -->
-    <section class="team-one-area">
-      <div class="container position-relative">
-        <div class="lines">
+    <section class="team-area position-relative z-1">
+      <div class="container team-container position-relative">
+        <div class="lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
           <span></span>
           <span></span>
           <span></span>
@@ -570,20 +573,19 @@
               <h3 class="section-title">Expart & professional team members</h3>
             </div>
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-7 align-self-end">
             <div class="view-all-member text-end">
               <a class="view-all-btn2" href="#">
-                View All Members
-                <div class="icon"><img src="assets/img/icons/icon-right.svg" alt="icon-right"></div>
+                View All Members <img class="ms-1" src="assets/img/icons/icon-right.svg" alt="icon-right">
               </a>
             </div>
           </div>
         </div>
-        <div class="team-one-main">
-          <div class="row g-4">
-            <div class="col-lg-3 team-one-label">
-              <div class="team-one-item">
-                <div class="image">
+        <div class="team-main">
+          <div class="row">
+            <div class="col-lg-3 team-label">
+              <div class="team-item">
+                <div class="image position-relative">
                   <img src="assets/img/team/team-1-img-1.png" alt="team-1-img" class="img-fluid w-100">
                 </div>
                 <div class="text">
@@ -592,9 +594,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 team-one-label">
-              <div class="team-one-item">
-                <div class="image">
+            <div class="col-lg-3 team-label">
+              <div class="team-item">
+                <div class="image position-relative">
                   <img src="assets/img/team/team-1-img-2.png" alt="team-1-img" class="img-fluid w-100">
                 </div>
                 <div class="text">
@@ -603,9 +605,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 team-one-label">
-              <div class="team-one-item">
-                <div class="image">
+            <div class="col-lg-3 team-label">
+              <div class="team-item">
+                <div class="image position-relative">
                   <img src="assets/img/team/team-1-img-3.png" alt="team-1-img" class="img-fluid w-100">
                 </div>
                 <div class="text">
@@ -614,9 +616,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 team-one-label">
-              <div class="team-one-item">
-                <div class="image">
+            <div class="col-lg-3 team-label">
+              <div class="team-item">
+                <div class="image position-relative">
                   <img src="assets/img/team/team-1-img-4.png" alt="team-1-img" class="img-fluid w-100">
                 </div>
                 <div class="text">
@@ -634,16 +636,16 @@
 
     <!-- testimonial one area end -->
     <!-- blog one area start -->
-    <section class="blog-one-area">
-      <div class="container position-relative">
-        <div class="lines">
+    <section class="blog-area position-relative z-1">
+      <div class="container blog-container position-relative">
+        <div class="lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
           <span></span>
         </div>
-        <div class="row g-4">
+        <div class="row">
           <div class="col-lg-5">
             <div class="section-title-block">
               <h5 class="section-sub-title">
@@ -658,68 +660,91 @@
           <div class="col-lg-7 align-self-end">
             <div class="view-all-article text-end">
               <a class="view-all-btn2" href="#">
-                View All Articles
-                <div class="icon"><img src="assets/img/icons/icon-right.svg" alt="icon-right"></div>
+                View All Articles <img class="ms-1" src="assets/img/icons/icon-right.svg" alt="icon-right">
               </a>
             </div>
           </div>
         </div>
-        <div class="blog-one-main">
-          <div class="blog-one-item">
-            <div class="date">
-              <p>14 Jun 2023</p>
-            </div>
-            <div class="blog-image">
-              <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
-            </div>
-            <div class="blog-title">
-              <h3 class="title">The Power of Intuitive UI/UX in <br> Design</h3>
-              <a href="#" class="view-all-btn2 d-block">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
-                  height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round"
-                  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 12l14 0" />
-                  <path d="M13 18l6 -6" />
-                  <path d="M13 6l6 6" /></svg></a>
-            </div>
-          </div>
-          <div class="blog-one-item blog-active">
-            <div class="date">
-              <p>18 Feb 2024</p>
-            </div>
-            <div class="blog-image">
-              <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
-            </div>
-            <div class="blog-title">
-              <h3 class="title">Staying ahead of the curve in the digital <br> world</h3>
-              <a href="#" class="view-all-btn2 d-block">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
-                  height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round"
-                  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 12l14 0" />
-                  <path d="M13 18l6 -6" />
-                  <path d="M13 6l6 6" /></svg></a>
+        <div class="blog-main">
+          <div class="blog-item position-relative">
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="date">
+                  <p>14 Jun 2023</p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="blog-image z-1 position-absolute">
+                  <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="blog-title d-flex flex-column">
+                  <h3 class="title">The Power of Intuitive UI/UX in <br> Design</h3>
+                  <a href="#" class="view-all-btn2">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                      height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg></a>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="blog-one-item">
-            <div class="date">
-              <p>07 Aug 2022</p>
+          <div class="blog-item position-relative blog-active">
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="date">
+                  <p>18 Feb 2024</p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="blog-image z-1 position-absolute">
+                  <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="blog-title d-flex flex-column">
+                  <h3 class="title">Staying ahead of the curve in the digital <br> world</h3>
+                  <a href="#" class="view-all-btn2">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                      height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg></a>
+                </div>
+              </div>
             </div>
-            <div class="blog-image">
-              <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
-            </div>
-            <div class="blog-title">
-              <h3 class="title">What you need to know for success online</h3>
-              <a href="#" class="view-all-btn2 d-block">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
-                  height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round"
-                  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M5 12l14 0" />
-                  <path d="M13 18l6 -6" />
-                  <path d="M13 6l6 6" /></svg></a>
+          </div>
+          <div class="blog-item position-relative">
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="date">
+                  <p>07 Aug 2022</p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="blog-image z-1 position-absolute">
+                  <img src="assets/img/blog/blog-1-img-1.png" alt="blog-1-img" class="img-fluid w-100">
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="blog-title d-flex flex-column">
+                  <h3 class="title">What you need to know for success online</h3>
+                  <a href="#" class="view-all-btn2">Read more <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                      height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -727,7 +752,7 @@
     </section>
     <!-- blog one area end -->
     <!-- footer one area start -->
-    <section class="footer-one-area">
+    <section class="foote-area">
       <div class="container position-relative">
         <div class="lines">
           <span></span>
@@ -746,7 +771,7 @@
             </div>
           </div>
         </div>
-        <div class="footer-one-menu">
+        <div class="footer-menu">
           <div class="row">
             <div class="col-lg-6">
               <ul class="list-unstyled">
