--- a/index.html
+++ b/index.html
@@ -751,53 +751,51 @@
       </div>
     </section>
     <!-- blog one area end -->
-    <!-- footer one area start -->
-    <section class="foote-area">
-      <div class="container position-relative">
-        <div class="lines">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 mx-auto">
-            <div class="footer-text text-center">
-              <h3 class="title">Let’s Create Something Greate</h3>
-              <p>We shift you from todays reality to tomorrow’s potential ensuring</p>
-              <a href="#" class="theme-btn">Let’s Talk With Us <span><img src="assets/img/icons/icon-up-right.svg"
-                    alt="icon-up-right"></span></a>
-            </div>
-          </div>
-        </div>
-        <div class="footer-menu">
-          <div class="row">
-            <div class="col-lg-6">
-              <ul class="list-unstyled">
-                <li><a href="#">ABOUT COMPANY</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul class="list-unstyled text-end">
-                <li><a href="#">PRAIVACY POLICY</a></li>
-                <li><a href="#">TEARMS & CONDITIONS</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- footer one area end -->
   </main>
   <!-- main area part end -->
 
-  <!-- footer part start -->
-
-  <!-- footer part end -->
+  <!-- footer area start -->
+  <footer class="footer-area position-relative z-1">
+    <div class="container footer-container position-relative">
+      <div class="lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 mx-auto">
+          <div class="footer-text text-center">
+            <h3 class="title">Let’s Create Something Greate</h3>
+            <p>We shift you from todays reality to tomorrow’s potential ensuring</p>
+            <a href="#" class="theme-btn">Let’s Talk With Us <span>
+                <img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-menu">
+        <div class="row">
+          <div class="col-lg-6">
+            <ul class="list-unstyled">
+              <li><a href="#">ABOUT COMPANY</a></li>
+              <li><a href="#">SERVICES</a></li>
+              <li><a href="#">PROJECTS</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <ul class="list-unstyled text-end">
+              <li><a href="#">PRAIVACY POLICY</a></li>
+              <li><a href="#">TEARMS & CONDITIONS</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- footer area end -->
 
 
   <!-- JS here -->
