--- a/error404.html
+++ b/error404.html
@@ -206,86 +206,29 @@
     <!-- page header section start -->
     <section class="page-header">
       <div class="container">
-        <h3 class="page-sub-title text-uppercase position-relative">
-          CONTACT DIGISO
-          <img class="position-absolute page-header-shape" src="assets/img/images/page-header-shape.svg"
-            alt="page-header-shape">
-        </h3>
-        <h1 class="page-title text-uppercase position-absolute z-n1 contact-title">Contact</h1>
+        <h1 class="page-title text-uppercase position-absolute z-n1">ERROR</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- contact info section start -->
-    <section class="contact-info-section">
+    <!-- error section end -->
+    <section class="error-section">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="contact-social-icon d-flex">
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-1.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-2.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-3.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-4.svg" alt="contact-icon"></a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="contact-info">
-              <p>Nunc nec semper arcu, id malesuada est. Integer sodales, magna ac porta ultricies, tortor sapien
-                malesuada dui, sit amet vestibulum magna dui et odio. Donec eu urna vitae orci lacinia malesuada. Duis
-                convallis nunc mi, eu euismod velit cursus vitae. Cras egestas quis dui a dignissim. Nunc ultricies mi
-                quis tristique dapibus.</p>
-              <ul class="list-unstyled">
-                <li><a href="tel:+05(9900)85493"><span>+</span> +05 (9900) 854 93</a></li>
-                <li><a href="mailto:info@rebrandexample.com"><span>+</span> info@rebrandexample.com</a></li>
-                <li><span>+</span> Nandipara, Road 6, Dhaka - 1214</li>
-              </ul>
-            </div>
+        <div class="text-center">
+          <h2 class="title text-uppercase">404</h2>
+          <h5 class="sub-title">Sorry! page did not found</h5>
+          <p class="mx-auto">The page you are looking for doesn't exist or has been moved</p>
+          <div class="back-top-home d-flex justify-content-center">
+            <a class="view-all-btn back-to-home-btn text-uppercase" href="index.html">
+              back to homepage
+              <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
+            </a>
           </div>
         </div>
       </div>
     </section>
-    <!-- contact info section end -->
-    <!-- contact form section start -->
-    <section class="contact-form-section">
-      <div class="container">
-
-      </div>
-    </section>
-    <!-- contact form section end -->
+    <!-- error section end -->
   </main>
   <!-- main area part end -->
-  <!-- subscribe now section start -->
-  <section class="subscribe-now-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5">
-          <div class="logo"><a href="index.html"><img src="assets/img/logo/logo2.svg" alt="logo2"></a></div>
-        </div>
-        <div class="col-lg-7">
-          <div class="subscribe">
-            <h4 class="subscribe-title">Subscribe Now</h4>
-            <form action="#">
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">@</span>
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                  aria-describedby="basic-addon1">
-              </div>
-              <button type="submit"><img src="assets/img/icons/icon-up-right-3.svg" alt="icon-up-right"></button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- subscribe now section end -->
-  <!-- footer section start -->
-  <footer class="footer-section-three footer-section-five">
-
-  </footer>
-  <!-- footer section end -->
 
   <!-- JS here -->
   <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
