--- a/index.html
+++ b/index.html
@@ -633,7 +633,12 @@
     </section>
     <!-- team one area end -->
     <!-- testimonial one area start -->
+    <section class="testimonial-area position-relative"
+      style="background: url(assets/img/testimonial/testimonial-img.png);">
+      <div class="overlay position-absolute top-0 start-0 w-100 h-100">
 
+      </div>
+    </section>
     <!-- testimonial one area end -->
     <!-- blog one area start -->
     <section class="blog-area position-relative z-1">
@@ -754,8 +759,8 @@
   </main>
   <!-- main area part end -->
 
-  <!-- footer area start -->
-  <footer class="footer-area position-relative z-1">
+  <!-- footer section start -->
+  <footer class="footer-section position-relative z-1">
     <div class="container footer-container position-relative">
       <div class="lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
         <span></span>
@@ -769,7 +774,8 @@
           <div class="footer-text text-center">
             <h3 class="title">Let’s Create Something Greate</h3>
             <p>We shift you from todays reality to tomorrow’s potential ensuring</p>
-            <a href="#" class="theme-btn">Let’s Talk With Us <span>
+            <a href="#" class="theme-btn position-relative">Let’s Talk With Us <span
+                class="d-flex justify-content-center align-items-center position-absolute top-0">
                 <img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></span>
             </a>
           </div>
@@ -778,24 +784,40 @@
       <div class="footer-menu">
         <div class="row">
           <div class="col-lg-6">
-            <ul class="list-unstyled">
-              <li><a href="#">ABOUT COMPANY</a></li>
-              <li><a href="#">SERVICES</a></li>
-              <li><a href="#">PROJECTS</a></li>
-              <li><a href="#">CONTACT</a></li>
+            <ul class="list-unstyled left-menu">
+              <li class="d-inline-block"><a class="text-uppercase" href="#">ABOUT COMPANY</a></li>
+              <li class="d-inline-block"><a class="text-uppercase" href="#">SERVICES</a></li>
+              <li class="d-inline-block"><a class="text-uppercase" href="#">PROJECTS</a></li>
+              <li class="d-inline-block"><a class="text-uppercase" href="#">CONTACT</a></li>
             </ul>
           </div>
           <div class="col-lg-6">
-            <ul class="list-unstyled text-end">
-              <li><a href="#">PRAIVACY POLICY</a></li>
-              <li><a href="#">TEARMS & CONDITIONS</a></li>
+            <ul class="list-unstyled text-end right-menu">
+              <li class="d-inline-block"><a class="text-uppercase" href="#">PRAIVACY POLICY</a></li>
+              <li class="d-inline-block"><a class="text-uppercase" href="#">TEARMS & CONDITIONS</a></li>
             </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="row">
+          <div class="col-lg-5">
+            <div class="footer-social-icon">
+              <a href="#"><img src="assets/img/icons/footer-icon-1.svg" alt="footer-icon"></a>
+              <a href="#"><img src="assets/img/icons/footer-icon-2.svg" alt="footer-icon"></a>
+              <a href="#"><img src="assets/img/icons/footer-icon-3.svg" alt="footer-icon"></a>
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="copyright-text text-end">
+              <p>All Right Reserved © 2024 Digiso</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </footer>
-  <!-- footer area end -->
+  <!-- footer section end -->
 
 
   <!-- JS here -->
