--- a/error404.html
+++ b/error404.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Digiso</title>
   <meta name="description" content="Digiso">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes">
 
   <link rel="shortcut icon" type="image/x-icon" href="">
   <!-- Place favicon.ico in the root directory -->
@@ -203,6 +204,7 @@
 
   <!-- main area part start -->
   <main>
+    
     <!-- page header section start -->
     <section class="page-header">
       <div class="container">
