--- a/faq.html
+++ b/faq.html
@@ -204,99 +204,34 @@
 
   <!-- main area part start -->
   <main>
-    <!-- page header section start -->
-    <section class="page-header">
-      <div class="container">
-        <h3 class="page-sub-title text-uppercase position-relative">
-          CONTACT DIGISO
-          <img class="position-absolute page-header-shape" src="assets/img/images/page-header-shape.svg"
-            alt="page-header-shape">
-        </h3>
-        <h1 class="page-title text-uppercase position-absolute z-n1 contact-title">Contact</h1>
-      </div>
-    </section>
-    <!-- page header section end -->
-    <!-- contact info section start -->
-    <section class="contact-info-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="contact-social-icon d-flex">
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-1.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-2.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-3.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-4.svg" alt="contact-icon"></a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="contact-info">
-              <p>Nunc nec semper arcu, id malesuada est. Integer sodales, magna ac porta ultricies, tortor sapien
-                malesuada dui, sit amet vestibulum magna dui et odio. Donec eu urna vitae orci lacinia malesuada. Duis
-                convallis nunc mi, eu euismod velit cursus vitae. Cras egestas quis dui a dignissim. Nunc ultricies mi
-                quis tristique dapibus.</p>
-              <ul class="list-unstyled">
-                <li><a href="tel:+05(9900)85493"><span>+</span> +05 (9900) 854 93</a></li>
-                <li><a href="mailto:info@rebrandexample.com"><span>+</span> info@rebrandexample.com</a></li>
-                <li><span>+</span> Nandipara, Road 6, Dhaka - 1214</li>
-              </ul>
-            </div>
-          </div>
+    <!-- inner page section start -->
+    <div class="inner-page-section">
+      <div class="container inner-page-container position-relative">
+        <div class="inner-page-lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
+        <!-- page header section start -->
+        <section class="page-header">
+          <h3 class="page-sub-title2 text-capitalize w-100">
+            We Are A Digital Agency For Visually Frequency And Questions ReBrand.
+          </h3>
+          <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday nights and aspires
+            to design the dent in the universe.</p>
+          <h1 class="page-title text-uppercase position-absolute z-n1 faq-title">FAQ REBANDE</h1>
+        </section>
+        <!-- page header section end -->
+         <!-- faq section start -->
+          <section class="faq-section">
+
+          </section>
+         <!-- faq section end -->
       </div>
-    </section>
-    <!-- contact info section end -->
-    <!-- contact form section start -->
-    <section class="contact-form-section">
-      <div class="gmap overflow-hidden position-relative">
-        <iframe
-          src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
-        <div class="container">
-          <div class="form-main position-absolute bottom-0 z-1 w-100">
-            <h4 class="form-title">Contact Us</h4>
-            <form action="#">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your first name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your last name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="email" class="form-control rounded-0 px-0" placeholder="Your email address*">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your phone number*">
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="input-group">
-                    <textarea placeholder="Your Message" class="form-control form-textarea rounded-0 px-0"></textarea>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <button type="submit" class="theme-btn position-relative">Let’s Talk With Us <span
-                      class="d-flex justify-content-center align-items-center position-absolute top-0">
-                      <img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></span>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- contact form section end -->
+    </div>
+    <!-- inner page section end -->
   </main>
   <!-- main area part end -->
   <!-- subscribe now section start -->
