--- a/faqs.html
+++ b/faqs.html
@@ -26,9 +26,9 @@
 
   <!-- header part start -->
   <div id="header-fixed-height"></div>
-  <header class="header-area" id="sticky-header">
-    <nav class="navbar navbar-expand-xl d-none d-xl-flex">
-      <div class="container">
+  <header class="header-section w-100" id="sticky-header">
+    <nav class="navbar p-0 navbar-expand-xl d-none d-xl-flex">
+      <div class="container px-0">
         <a class="navbar-brand" href="index.html">
           <img src="assets/img/logo/logo.svg" alt="logo">
         </a>
@@ -132,7 +132,7 @@
             </li>
           </ul>
           <div class="join-with-us">
-            <a href="#" class="join-with-us-btn">Jion with us</a>
+            <a href="#" class="join-with-us-btn text-decoration-underline">Jion with us</a>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
   <main>
     <!-- inner page section start -->
     <div class="inner-page-section">
-      <div class="container inner-page-container position-relative">
+      <div class="container px-0 inner-page-container position-relative">
         <div class="inner-page-lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
           <span></span>
           <span></span>
@@ -219,16 +219,113 @@
           <h3 class="page-sub-title2 text-capitalize w-100">
             We Are A Digital Agency For Visually Frequency And Questions ReBrand.
           </h3>
-          <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday nights and aspires
+          <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday nights
+            and aspires
             to design the dent in the universe.</p>
           <h1 class="page-title text-uppercase position-absolute z-n1 faq-title">FAQ REBANDE</h1>
         </section>
         <!-- page header section end -->
-         <!-- faq section start -->
-          <section class="faq-section">
-
-          </section>
-         <!-- faq section end -->
+        <!-- faq section start -->
+        <section class="faq-section">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="faq-body">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Design should enrich our day
+                      </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Bring their individual experience and creative
+                      </button>
+                    </h4>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                      data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Human centred design to challenges
+                      </button>
+                    </h4>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                      data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Design should enrich our day
+                      </button>
+                    </h4>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                      data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingFive">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        Developing core web applications
+                      </button>
+                    </h4>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                      data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h4 class="accordion-header" id="headingSix">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                        Are they everything to everyone?
+                      </button>
+                    </h4>
+                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                      data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <p>Our design services starts and ends with a best-in-class experience strategy that builds brands. Through a process of iteration and prototyping design interfaces that bring joy to people</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <div class="faq-image">
+                <img src="assets/img/images/faq-img.png" alt="faq-img" class="img-fluid w-100">
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- faq section end -->
       </div>
     </div>
     <!-- inner page section end -->
