--- a/error404.html
+++ b/error404.html
@@ -26,9 +26,9 @@
 
   <!-- header part start -->
   <div id="header-fixed-height"></div>
-  <header class="header-area" id="sticky-header">
-    <nav class="navbar navbar-expand-xl d-none d-xl-flex">
-      <div class="container">
+  <header class="header-section w-100" id="sticky-header">
+    <nav class="navbar p-0 navbar-expand-xl d-none d-xl-flex">
+      <div class="container px-0">
         <a class="navbar-brand" href="index.html">
           <img src="assets/img/logo/logo.svg" alt="logo">
         </a>
@@ -132,7 +132,7 @@
             </li>
           </ul>
           <div class="join-with-us">
-            <a href="#" class="join-with-us-btn">Jion with us</a>
+            <a href="#" class="join-with-us-btn text-decoration-underline">Jion with us</a>
           </div>
         </div>
       </div>
