--- a/career-details.html
+++ b/career-details.html
@@ -216,196 +216,20 @@
     <section class="page-header">
       <div class="container px-0">
         <div class="row">
-          <div class="col-lg-8 align-self-center">
-            <h3 class="page-sub-title2 text-capitalize w-100">
-              Join our team & <br> let’s work together
+          <div class="col-lg-6 align-self-center">
+            <h3 class="page-sub-title text-capitalize w-100">
+              CONTENT WRITER
             </h3>
           </div>
-          <div class="col-lg-4 align-self-center">
-            <a class="view-all-btn view-all-btn-primary" href="career-details.html">
-              Join our talented team
-              <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
-            </a>
+          <div class="col-lg-6 align-self-end">
+           <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday nights and aspires to design the dent in the universe.</p>
           </div>
         </div>
         <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">MEMBER</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- career banner section start -->
-    <section class="career-banner-section">
-      <div class="img">
-        <img src="assets/img/career/career-banner-1.png" alt="career-banner-1" class="img-fluid w-100">
-      </div>
-    </section>
-    <!-- career banner section end -->
-    <!-- career details section start -->
-    <section class="career-details-section">
-      <div class="container px-0">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <div class="text-center">
-              <ul class="list-unstyled d-flex justify-content-center align-items-center">
-                <li class="text-capitalize position-relative">Future</li>
-                <li class="text-capitalize position-relative">Community</li>
-                <li class="text-capitalize position-relative">Honor</li>
-              </ul>
-              <p>What sets us apart is what brings us together – a shared passion for solving business challenges
-                through strategy, design, and engineering. We are the sum total of our team, their unique perspectives,
-                capabilities, and our ability to collaborate from ideation to deployment.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- career details section end -->
-    <!-- career inner images section start -->
-    <section class="career-inner-image-section">
-      <div class="container px-0">
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="image-item">
-              <img src="assets/img/career/career-inner-image-1.png" alt="career-inner-image" class="img-fluid w-100">
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="image-item">
-              <img src="assets/img/career/career-inner-image-2.png" alt="career-inner-image" class="img-fluid w-100">
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="image-item">
-              <img src="assets/img/career/career-inner-image-3.png" alt="career-inner-image" class="img-fluid w-100">
-            </div>
-          </div>
-          <div class="col-lg-8">
-            <div class="image-item">
-              <img src="assets/img/career/career-inner-image-4.png" alt="career-inner-image" class="img-fluid w-100">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- career inner images section end -->
-    <!-- vacancy section start -->
-    <section class="vacancy-section">
-      <div class="container px-0">
-        <div class="vacancy-main">
-          <div class="row">
-            <div class="col-lg-5 offset-lg-1">
-              <div class="section-title-block">
-                <h3 class="section-title">We’re Currently
-                  hiring</h3>
-              </div>
-            </div>
-          </div>
-          <div class="vacancy-item d-lg-flex justify-content-between align-items-center gap-4">
-            <div class="number">01</div>
-            <div class="subject">
-              <h4>UI/UX Designer</h4>
-            </div>
-            <div class="position">
-              <p>(02 Open Roles)</p>
-            </div>
-            <div class="view position-relative">
-              <a href="#"><img src="assets/img/icons/icon-right.svg" alt=""></a>
-              <a class="view-all-btn view-all-btn-primary position-absolute" href="career-details.html">
-                View Details
-                <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
-              </a>
-            </div>
-          </div>
-          <div class="vacancy-item d-lg-flex justify-content-between align-items-center gap-4">
-            <div class="number">02</div>
-            <div class="subject">
-              <h4>Frontend Developer</h4>
-            </div>
-            <div class="position">
-              <p>(07 Open Roles)</p>
-            </div>
-            <div class="view position-relative">
-              <a href="#"><img src="assets/img/icons/icon-right.svg" alt=""></a>
-              <a class="view-all-btn view-all-btn-primary position-absolute" href="career-details.html">
-                View Details
-                <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
-              </a>
-            </div>
-          </div>
-          <div class="vacancy-item d-lg-flex justify-content-between align-items-center gap-4">
-            <div class="number">03</div>
-            <div class="subject">
-              <h4>Product Manager</h4>
-            </div>
-            <div class="position">
-              <p>(15 Open Roles)</p>
-            </div>
-            <div class="view position-relative">
-              <a href="#"><img src="assets/img/icons/icon-right.svg" alt=""></a>
-              <a class="view-all-btn view-all-btn-primary position-absolute" href="career-details.html">
-                View Details
-                <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
-              </a>
-            </div>
-          </div>
-          <div class="vacancy-item d-lg-flex justify-content-between align-items-center gap-4">
-            <div class="number">04</div>
-            <div class="subject">
-              <h4>JavaScript Engineer</h4>
-            </div>
-            <div class="position">
-              <p>(03 Open Roles)</p>
-            </div>
-            <div class="view position-relative">
-              <a href="#"><img src="assets/img/icons/icon-right.svg" alt=""></a>
-              <a class="view-all-btn view-all-btn-primary position-absolute" href="career-details.html">
-                View Details
-                <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- vacancy section end -->
-    <!-- benifits section start -->
-    <section class="benifits-section">
-      <div class="container px-0">
-        <div class="row">
-          <div class="col-lg-7">
-            <div class="benifits-main d-flex align-items-center flex-wrap">
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Vacation & Paid Time Off</h4>
-              </div>
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Work-life Integration</h4>
-              </div>
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Paternity Benefits</h4>
-              </div>
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Personal Career Growth</h4>
-              </div>
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Learning & Development</h4>
-              </div>
-              <div class="benifits-item text-center d-flex justify-content-center align-items-center">
-                <h4>Healthy Food & Snacks</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-5 align-self-center">
-            <div class="benifits-info">
-              <h4 class="title">Global Perks &
-                Benefits</h4>
-              <p>We want you to love working here as much as we do. To inspire our team to be creative, productive, and
-                most importantly – feel valued as employees, we offer endless perks and de-stressors. How fun it is to
-                unwind while at work!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- benifits section end -->
+    
     </div>
   </main>
   <!-- main area part end -->
